dashbaord lista users ok, sin angular material

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,14 @@
 <p>
   dashboard works!
 </p>
+
+<!-- <mat-list>  
+   <mat-list-item *ngFor="let user of users" >
+    <img *ngIf="user.pictureURL" mat-list-avatar 
+          [src]="user.pictureURL">
+    <img *ngIf="!user.pictureURL" mat-list-avatar 
+          [src]="defaultPictureURL">
+    <h4 mat-line>{{user.firstName}}</h4>
+    <p mat-line>{{user.lastName}}</p>
+  </mat-list-item>  
+</mat-list> -->
