--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   dashboard works!
 </p>
 
-<!-- <mat-list>  
+<mat-list>  
    <mat-list-item *ngFor="let user of users" >
     <img *ngIf="user.pictureURL" mat-list-avatar 
           [src]="user.pictureURL">
@@ -11,4 +11,4 @@
     <h4 mat-line>{{user.firstName}}</h4>
     <p mat-line>{{user.lastName}}</p>
   </mat-list-item>  
-</mat-list> -->
+</mat-list> 
