--- a/src/app/dashboard-list-item/dashboard-list-item.component.html
+++ b/src/app/dashboard-list-item/dashboard-list-item.component.html
@@ -1,9 +1,17 @@
-  <mat-list-item (click)="onClick(userParam)" >
-   <img *ngIf="userParam.pictureURL" mat-list-avatar 
-         [src]="userParam.pictureURL">
-   <img *ngIf="!userParam.pictureURL" mat-list-avatar 
-         [src]="defaultPictureURL">
-   <h4 mat-line>{{userParam.firstName}} {{userParam.lastName}}</h4>
-   <p mat-line>{{userParam.gender}}</p>
-   <p mat-line>{{userParam.street}}</p>
- </mat-list-item>  
+  <mat-card class="example-card">
+      <mat-card-header>
+            <img *ngIf="userParam.pictureURL" mat-card-avatar [src]="userParam.pictureURL">
+            <img *ngIf="!userParam.pictureURL" mat-card-avatar [src]="defaultPictureURL">
+        <mat-card-title>{{userParam.firstName}} {{userParam.lastName}}</mat-card-title>
+        <mat-card-subtitle>{{userParam.gender}}</mat-card-subtitle>
+      </mat-card-header>      
+      <mat-card-content>
+        <p>
+            {{userParam.street}}
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button (click)="onClick(userParam)" >Edit</button>
+        <button mat-button>Delete</button>
+      </mat-card-actions>
+  </mat-card>
