--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,3 +9,94 @@
     (onSelect)="onSelectUser($event)">    
   </pa-dashboard-list-item>  
 </mat-list> 
+
+<!-- <mat-grid-list cols="2" rowHeight="2:1">
+    <pa-dashboard-list-item *ngFor="let user of users"
+    [userParam]="user"
+    [defaultPictureURL]="'http://findicons.com/files/icons/1072/face_avatars/300/a02.png'"    
+    (onSelect)="onSelectUser($event)">    
+  </pa-dashboard-list-item>  
+
+</mat-grid-list> -->
+
+<!-- 
+<mat-grid-list cols="2">
+    <mat-grid-tile>
+        <mat-card class="example-card">
+            <mat-card-header>
+              <img mat-card-avatar src="assets/images/ronaldPerfil.png" alt="Photo of a Ronald">
+              <mat-card-title>Ronald Pinto</mat-card-title>
+              <mat-card-subtitle>Developer</mat-card-subtitle>
+            </mat-card-header>
+            <img mat-card-image src="assets/images/mtb.jpg" alt="MTB">
+            <mat-card-content>
+              <p>
+                  I like mountain bike, MTB.
+              </p>
+            </mat-card-content>
+            <mat-card-actions>
+              <button mat-button>LIKE</button>
+              <button mat-button>SHARE</button>
+            </mat-card-actions>
+          </mat-card>
+          </mat-grid-tile>
+          <mat-grid-tile>
+        <mat-card class="example-card">
+            <mat-card-header>
+              <img mat-card-avatar src="assets/images/ronaldPerfil.png" alt="Photo of a Ronald">
+              <mat-card-title>Ronald Pinto</mat-card-title>
+              <mat-card-subtitle>Developer</mat-card-subtitle>
+            </mat-card-header>
+            <img mat-card-image src="assets/images/mtb.jpg" alt="MTB">
+            <mat-card-content>
+              <p>
+                I like mountain bike, MTB.
+              </p>
+            </mat-card-content>
+            <mat-card-actions>
+              <button mat-button>LIKE</button>
+              <button mat-button>SHARE</button>
+            </mat-card-actions>
+          </mat-card>
+          </mat-grid-tile>
+          <mat-grid-tile>
+              <mat-card class="example-card">
+                  <mat-card-header>
+                    <img mat-card-avatar src="assets/images/ronaldPerfil.png" alt="Photo of a Ronald">
+                    <mat-card-title>Ronald Pinto</mat-card-title>
+                    <mat-card-subtitle>Developer</mat-card-subtitle>
+                  </mat-card-header>
+                  <img mat-card-image src="assets/images/mtb.jpg" alt="MTB">
+                  <mat-card-content>
+                    <p>
+                      I like mountain bike, MTB.
+                    </p>
+                  </mat-card-content>
+                  <mat-card-actions>
+                    <button mat-button>LIKE</button>
+                    <button mat-button>SHARE</button>
+                  </mat-card-actions>
+                </mat-card>
+                </mat-grid-tile>
+                <mat-grid-tile>
+                    <mat-card class="example-card">
+                        <mat-card-header>
+                          <img mat-card-avatar src="assets/images/ronaldPerfil.png" alt="Photo of a Ronald">
+                          <mat-card-title>Ronald Pinto</mat-card-title>
+                          <mat-card-subtitle>Developer</mat-card-subtitle>
+                        </mat-card-header>
+                        <img mat-card-image src="assets/images/mtb.jpg" alt="MTB">
+                        <mat-card-content>
+                          <p>
+                            I like mountain bike, MTB.
+                          </p>
+                        </mat-card-content>
+                        <mat-card-actions>
+                          <button mat-button>LIKE</button>
+                          <button mat-button>SHARE</button>
+                        </mat-card-actions>
+                      </mat-card>
+                      </mat-grid-tile>
+
+
+        </mat-grid-list> -->
