--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,7 +6,8 @@
    <pa-dashboard-list-item *ngFor="let user of users"
     [userParam]="user"
     [defaultPictureURL]="'http://findicons.com/files/icons/1072/face_avatars/300/a02.png'"    
-    (onSelect)="onSelectUser($event)">    
+    (onEditUserOutput)="onEditUser($event)"    
+    (onDeleteUserOutput)="onDeleteUser($event)">    
   </pa-dashboard-list-item>  
 </mat-list> 
 
