--- a/src/app/dashboard-list-item/dashboard-list-item.component.html
+++ b/src/app/dashboard-list-item/dashboard-list-item.component.html
@@ -11,7 +11,7 @@
         </p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button (click)="onClickEdit(userParam)" >Edit</button>
-        <button mat-button (click)="onClickDelete(userParam)">Delete</button>
+        <button mat-raised-button (click)="onClickEdit(userParam)" >Edit</button>
+        <button mat-raised-button color="warn" (click)="onClickDelete(userParam)">Delete</button>        
       </mat-card-actions>
   </mat-card>
