--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,14 +3,18 @@
    <form (ngSubmit)="onLogin(userManager)" #loginForm="ngForm">
       <div class="form-group" [ngClass]="{'has-error': username.invalid && username.dirty}">
           <label for="username" class="control-label">Username (*)</label>
-          <input type="text" class="form-control" name="username" [(ngModel)]="userManager.username" #username="ngModel" required /> 
+          <input type="text" class="form-control" name="username" [(ngModel)]="userManager.username" #username="ngModel" required 
+          pattern="[a-zA-Z0-9\s]+" title="Character invalid"
+          /> 
           <div *ngIf="username.invalid && username.dirty" class="text-danger">
             Username is required
           </div>
       </div>
       <div class="form-group" [ngClass]="{'has-error': password.invalid && password.dirty}">
           <label for="password" class="control-label">Password (*)</label>
-          <input type="password" name="password" class="form-control" #password="ngModel" [(ngModel)]="userManager.password" required /> 
+          <input type="password" name="password" class="form-control" #password="ngModel" [(ngModel)]="userManager.password" required 
+          pattern="[a-zA-Z0-9\s]+" title="Character invalid"
+          /> 
           <div *ngIf="password.invalid && password.dirty" class="text-danger">
             Password is required
         </div>          
