--- a/src/app/user-edit/user-edit.component.html
+++ b/src/app/user-edit/user-edit.component.html
@@ -3,8 +3,7 @@
 </h1>
 
 <div class="container" *ngIf="user">  
-  <form (ngSubmit)="onSave(user)" 
-        #userForm="ngForm">
+  <form (ngSubmit)="onSave(user)" #userForm="ngForm">
     
       <div class="form-group" 
           [ngClass]="{'has-error': firtsName.invalid && firtsName.dirty}">
@@ -94,27 +93,33 @@
              name="email" 
              [(ngModel)]="user.email"
              #email="ngModel" 
+             pattern="^[a-z0-9._-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+             title="Email is invalid"
              required>
       <div *ngIf="email.invalid && email.dirty"
             class="text-danger">
-            Email is required
+            Email is required.
       </div>
     </div>
 
     <div class="form-group" [ngClass]="{'has-error': pictureURL.invalid && pictureURL.dirty}">
       <label for="pictureURL" class="control-label">
-        Email
+        Picture URL
       </label>
       <input type="text" class="form-control" 
              name="pictureURL" 
              [(ngModel)]="user.pictureURL"
              #pictureURL="ngModel" 
+             pattern="(?:([^:/?#]+):)?(?://([^/?#]*))?([^?#]*\.(?:jpg|gif|png))(?:\?([^#]*))?(?:#(.*))?"
+             title="Picture URL invalid"
              required>
       <div *ngIf="pictureURL.invalid && pictureURL.dirty"
             class="text-danger">
             PictureURL is required
       </div>
     </div>
+
+    <img [src]="user.pictureURL" class="img-thumbnail" alt="Picture URL"> <br/>
     
     <button class="btn btn-success" 
             type="submit"
