--- a/src/app/dashboard-list-item/dashboard-list-item.component.html
+++ b/src/app/dashboard-list-item/dashboard-list-item.component.html
@@ -15,3 +15,22 @@
         <button mat-raised-button color="warn" (click)="onClickDelete(userParam)">Delete</button>        
       </mat-card-actions>
   </mat-card>
+  <!-- <mat-grid-tile>
+    <mat-card class="example-card">
+      <mat-card-header>
+            <img *ngIf="userParam.pictureURL" mat-card-avatar [src]="userParam.pictureURL">
+            <img *ngIf="!userParam.pictureURL" mat-card-avatar [src]="defaultPictureURL">
+        <mat-card-title>{{userParam.firstName}} {{userParam.lastName}}</mat-card-title>
+        <mat-card-subtitle>{{userParam.gender}}</mat-card-subtitle>
+      </mat-card-header>      
+      <mat-card-content>
+        <p>
+            {{userParam.street}}
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-raised-button (click)="onClickEdit(userParam)" >Edit</button>
+        <button mat-raised-button color="warn" (click)="onClickDelete(userParam)">Delete</button>        
+      </mat-card-actions>
+  </mat-card>
+</mat-grid-tile> -->
