--- a/src/app/user-edit/user-edit.component.html
+++ b/src/app/user-edit/user-edit.component.html
@@ -1,134 +1,119 @@
-<h1>
-  User
-</h1>
-
-<div class="container" *ngIf="user">  
-  <form (ngSubmit)="onSave(user)" #userForm="ngForm">
-    
-      <div class="form-group" 
-          [ngClass]="{'has-error': firtsName.invalid && firtsName.dirty}">
-      <label for="firtsName" class="control-label">
-        Firts Name
-      </label>
-      <input type="text" class="form-control" 
-             name="firtsName" 
-             [(ngModel)]="user.firstName"
-             #firtsName="ngModel" 
-             required>
-         <div *ngIf="firtsName.invalid && firtsName.dirty">
-          First Name is required
-        </div>
-    </div>
-    
-    <div class="form-group" [ngClass]="{'has-error': lastName.invalid && lastName.dirty}">
-      <label for="lastName" class="control-label">
-        Last Name
-      </label>
-      <input type="text" class="form-control" 
-             name="lastName" 
-             [(ngModel)]="user.lastName"
-             #lastName="ngModel"
-             required>
-      <div *ngIf="lastName.invalid && lastName.dirty"
-            class="text-danger">
-            Last Name is required
+<div class="container-fluid">  
+  <div class="row">    
+      <div *ngIf="!isNewUser"  class="col-sm-6">
+          <h2 style="color: dimgrey;">Edit User</h2>
       </div>
-    </div>
-    
-    <div class="form-group" [ngClass]="{'has-error': street.invalid && street.dirty}">
-      <label for="street" class="control-label">
-         Street
-      </label>
-      <input type="text" class="form-control" 
-             name="street" 
-             [(ngModel)]="user.street"
-             #street="ngModel" 
-             required>
-      <div *ngIf="street.invalid && street.dirty"
-            class="text-danger">
-            Street is required
+      <div *ngIf="isNewUser" class="col-sm-6">
+          <h2 style="color: dimgrey;">New User</h2>
       </div>
-    </div>
-
-    <div class="form-group" [ngClass]="{'has-error': city.invalid && city.dirty}">
-      <label for="city" class="control-label">
-         Cityt
-      </label>
-      <input type="text" class="form-control" 
-             name="city" 
-             [(ngModel)]="user.city"
-             #city="ngModel" 
-             required>
-      <div *ngIf="city.invalid && city.dirty"
-            class="text-danger">
-            City is required
+      <div  class="col-sm-6">          
       </div>
+  </div>  
+  <div class="container" *ngIf="user">
+      <form (ngSubmit)="onSave(user)" #userForm="ngForm">
+  <div class="row">    
+    <div class="col-sm-6">
+        <img [src]="user.pictureURL" class="img-thumbnail" alt="Picture URL">
     </div>
-
-    <div class="form-group" >
-      <label for="gender" class="control-label">
-         Gender
-      </label>
-      <div class="form-group">
-        <div class="radio">
-            <label>
-                <input type="radio" name="gender" value="male" ng-model="user.gender">
-                Male
+    <div class="col-sm-6">
+        <div class="form-group" [ngClass]="{'has-error': firtsName.invalid && firtsName.dirty}">
+            <label for="firtsName" class="control-label">
+              Firts Name
             </label>
-        </div>
-        <div class="radio">
-            <label>
-                <input type="radio" name="gender" value="female" ng-model="user.gender">
-                Female
+            <input type="text" class="form-control" name="firtsName" [(ngModel)]="user.firstName" #firtsName="ngModel" required>
+            <div *ngIf="firtsName.invalid && firtsName.dirty">
+              First Name is required
+            </div>
+          </div>
+      
+          <div class="form-group" [ngClass]="{'has-error': lastName.invalid && lastName.dirty}">
+            <label for="lastName" class="control-label">
+              Last Name
             </label>
-        </div>
+            <input type="text" class="form-control" name="lastName" [(ngModel)]="user.lastName" #lastName="ngModel" required>
+            <div *ngIf="lastName.invalid && lastName.dirty" class="text-danger">
+              Last Name is required
+            </div>
+          </div>
+      
+          <div class="form-group" [ngClass]="{'has-error': street.invalid && street.dirty}">
+            <label for="street" class="control-label">
+              Street
+            </label>
+            <input type="text" class="form-control" name="street" [(ngModel)]="user.street" #street="ngModel" required>
+            <div *ngIf="street.invalid && street.dirty" class="text-danger">
+              Street is required
+            </div>
+          </div>
+      
+          <div class="form-group" [ngClass]="{'has-error': city.invalid && city.dirty}">
+            <label for="city" class="control-label">
+              Cityt
+            </label>
+            <input type="text" class="form-control" name="city" [(ngModel)]="user.city" #city="ngModel" required>
+            <div *ngIf="city.invalid && city.dirty" class="text-danger">
+              City is required
+            </div>
+          </div>
+      
+          <div class="form-group">
+            <label for="gender" class="control-label">
+              Gender
+            </label>
+            <div class="form-group">
+              <div class="radio">
+                <label>
+                  <input type="radio" name="gender" value="male" ng-model="user.gender"> Male
+                </label>
+              </div>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="gender" value="female" ng-model="user.gender"> Female
+                </label>
+              </div>
+            </div>
+          </div>
+      
+          <div class="form-group" [ngClass]="{'has-error': email.invalid && email.dirty}">
+            <label for="city" class="control-label">
+              Email
+            </label>
+            <input type="text" class="form-control" name="email" [(ngModel)]="user.email" #email="ngModel" pattern="^[a-z0-9._-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+              title="Email is invalid" required>
+            <div *ngIf="email.invalid && email.dirty" class="text-danger">
+              Email is required.
+            </div>
+          </div>
+      
+          <div class="form-group" [ngClass]="{'has-error': pictureURL.invalid && pictureURL.dirty}">
+            <label for="pictureURL" class="control-label">
+              Picture URL
+            </label>
+            <input type="text" class="form-control" name="pictureURL" [(ngModel)]="user.pictureURL" #pictureURL="ngModel" pattern="(?:([^:/?#]+):)?(?://([^/?#]*))?([^?#]*\.(?:jpg|gif|png))(?:\?([^#]*))?(?:#(.*))?"
+              title="Picture URL invalid" required>
+            <div *ngIf="pictureURL.invalid && pictureURL.dirty" class="text-danger">
+              PictureURL is required
+            </div>
+          </div>
+          <button class="btn btn-success" type="submit" [disabled]="userForm.form.invalid">
+              Save
+            </button>          
     </div>
-    </div>
-
-    <div class="form-group" [ngClass]="{'has-error': email.invalid && email.dirty}">
-      <label for="city" class="control-label">
-        Email
-      </label>
-      <input type="text" class="form-control" 
-             name="email" 
-             [(ngModel)]="user.email"
-             #email="ngModel" 
-             pattern="^[a-z0-9._-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
-             title="Email is invalid"
-             required>
-      <div *ngIf="email.invalid && email.dirty"
-            class="text-danger">
-            Email is required.
-      </div>
-    </div>
-
-    <div class="form-group" [ngClass]="{'has-error': pictureURL.invalid && pictureURL.dirty}">
-      <label for="pictureURL" class="control-label">
-        Picture URL
-      </label>
-      <input type="text" class="form-control" 
-             name="pictureURL" 
-             [(ngModel)]="user.pictureURL"
-             #pictureURL="ngModel" 
-             pattern="(?:([^:/?#]+):)?(?://([^/?#]*))?([^?#]*\.(?:jpg|gif|png))(?:\?([^#]*))?(?:#(.*))?"
-             title="Picture URL invalid"
-             required>
-      <div *ngIf="pictureURL.invalid && pictureURL.dirty"
-            class="text-danger">
-            PictureURL is required
-      </div>
-    </div>
-
-    <img [src]="user.pictureURL" class="img-thumbnail" alt="Picture URL"> <br/>
-    
-    <button class="btn btn-success" 
-            type="submit"
-            [disabled]="userForm.form.invalid">
-        Save
-    </button>       
-  </form>
-  <button class="btn" (click)="onCancel()" >
-    Cancel
-  </button>    
+  </div>
+</form>
+<div class="row">    
+    <div class="col-sm-12">        
+        &nbsp;
+    </div>       
+  </div>
+<div class="row">    
+    <div class="col-sm-6">        
+    </div>       
+  <div class="col-sm-6">
+      <button class="btn" (click)="onCancel()">
+          Cancel
+        </button>
+  </div>       
 </div>
 
+</div>
