add colors buttons dashboard

--- a/src/app/dashboard-list-item/dashboard-list-item.component.html
+++ b/src/app/dashboard-list-item/dashboard-list-item.component.html
@@ -11,8 +11,8 @@
         </p>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-raised-button (click)="onClickEdit(userParam)" >Edit</button>
-        <button mat-raised-button color="warn" (click)="onClickDelete(userParam)">Delete</button>        
+        <button type="button" class="btn btn-success btn-sm" (click)="onClickEdit(userParam)" >Edit</button>
+        <button type="button" class="btn btn-danger btn-sm" (click)="onClickDelete(userParam)">Delete</button>                
       </mat-card-actions>
   </mat-card>
   <!-- <mat-grid-tile>
