--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,48 +4,15 @@
 <button class="btn btn-primary pull-right" [routerLink]="['/user', 'new']">
 Add New
 </button>
-<!-- list start ok -->
-<mat-list>  
-   <pa-dashboard-list-item *ngFor="let user of users"
+
+<mat-grid-list cols="2" rowHeight="300px">
+    <mat-grid-tile
+    *ngFor="let user of users">  
+   <pa-dashboard-list-item 
     [userParam]="user"
     [defaultPictureURL]="'https://www.juptr.io/images/default-user.png'"    
     (onEditUserOutput)="onEditUser($event)"    
     (onDeleteUserOutput)="onDeleteUser($event)">    
   </pa-dashboard-list-item>  
-</mat-list> 
-<!-- list end ok -->
-
-<!-- <mat-grid-list cols="2" rowHeight="200px">  
-   <pa-dashboard-list-item *ngFor="let user of users"
-    [userParam]="user"
-    [defaultPictureURL]="'https://www.juptr.io/images/default-user.png'"    
-    (onEditUserOutput)="onEditUser($event)"    
-    (onDeleteUserOutput)="onDeleteUser($event)">    
-  </pa-dashboard-list-item>  
-</mat-grid-list>  -->
-
-
-<!-- <mat-grid-list cols="2" rowHeight="300px">
-  <mat-grid-tile
-  *ngFor="let user of users">
-    <mat-card >
-      <mat-card-header>
-            <img *ngIf="user.pictureURL" mat-card-avatar [src]="user.pictureURL">
-            <img *ngIf="!user.pictureURL" mat-card-avatar [src]="defaultPictureURL">
-        <mat-card-title>{{user.firstName}} {{user.lastName}}</mat-card-title>
-        <mat-card-subtitle>{{user.gender}}</mat-card-subtitle>
-      </mat-card-header>      
-      <mat-card-content>
-        <p>
-            {{user.street}}
-        </p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button type="button" class="btn btn-success btn-sm" (click)="onClickEdit(user)" >Edit</button>
-        <button type="button" class="btn btn-danger btn-sm" (click)="onClickDelete(user)">Delete</button>                
-      </mat-card-actions>
-  </mat-card>
   </mat-grid-tile>
-</mat-grid-list> -->
-
-
+</mat-grid-list> 
