--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,7 @@
-<h1 style="color: dimgrey;">
-  Dashboard 
-</h1>
-<button class="btn btn-primary pull-right" [routerLink]="['/user', 'new']">
+<pa-navbar></pa-navbar>
+<!-- <button class="btn btn-primary pull-right" [routerLink]="['/user', 'new']">
 Add New
-</button>
+</button> -->
 
 <mat-grid-list cols="2" rowHeight="300px">
     <mat-grid-tile
