--- a/src/app/dashboard-list-item/dashboard-list-item.component.html
+++ b/src/app/dashboard-list-item/dashboard-list-item.component.html
@@ -1,4 +1,4 @@
-<mat-card >
+<mat-card class="user-card" >
       <mat-card-header>
             <img *ngIf="userParam.pictureURL" mat-card-avatar [src]="userParam.pictureURL">
             <img *ngIf="!userParam.pictureURL" mat-card-avatar [src]="defaultPictureURL">
