--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,10 +10,10 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="/dashboard">Dashboard</a></li>          
+          <li class="active"><a [routerLink]="['/dashboard']">Dashboard</a></li>          
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/user/new"><span class="glyphicon glyphicon-user"></span> Add new user</a></li>
+          <li><a [routerLink]="['/user', 'new']" ><span class="glyphicon glyphicon-user"></span> Add new user</a></li>
           <li><a href="/"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
         </ul>
       </div>
