--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,18 +3,18 @@
    <form (ngSubmit)="onLogin(userManager)" #loginForm="ngForm" class="form-signin">
       <h2 class="form-signin-heading">Login</h2>
       <div class="form-group" [ngClass]="{'has-error': username.invalid && username.dirty}">
-          <label for="username" class="control-label">Username (*)</label>
+          <label for="username" class="control-label">Username (<b style="color: red">*</b>)</label>
           <input type="text" class="form-control" name="username" [(ngModel)]="userManager.username" #username="ngModel" required 
-          pattern="[a-zA-Z0-9\s]+" title="Character invalid"
+          pattern="[a-zA-Z0-9\s]+" (keypress)="_keyPressAlphanumeric($event)"
           /> 
           <div *ngIf="username.invalid && username.dirty" class="text-danger">
             Username is required
           </div>
       </div>
       <div class="form-group" [ngClass]="{'has-error': password.invalid && password.dirty}">
-          <label for="password" class="control-label">Password (*)</label>
+          <label for="password" class="control-label">Password (<b style="color: red">*</b>)</label>
           <input type="password" name="password" class="form-control" #password="ngModel" [(ngModel)]="userManager.password" required 
-          pattern="[a-zA-Z0-9\s]+" title="Character invalid"
+          pattern="[a-zA-Z0-9\s]+" (keypress)="_keyPressAlphanumeric($event)"
           /> 
           <div *ngIf="password.invalid && password.dirty" class="text-danger">
             Password is required
