--- a/src/app/user-edit/user-edit.component.html
+++ b/src/app/user-edit/user-edit.component.html
@@ -19,7 +19,7 @@
     <div class="col-sm-6">
         <div class="form-group" [ngClass]="{'has-error': firtsName.invalid && firtsName.dirty}">
             <label for="firtsName" class="control-label">
-              Firts Name
+              Firts Name (<b style="color: red">*</b>) 
             </label>
             <input type="text" class="form-control" name="firtsName" [(ngModel)]="user.firstName" #firtsName="ngModel" required>
             <div *ngIf="firtsName.invalid && firtsName.dirty">
@@ -29,7 +29,7 @@
       
           <div class="form-group" [ngClass]="{'has-error': lastName.invalid && lastName.dirty}">
             <label for="lastName" class="control-label">
-              Last Name
+              Last Name (<b style="color: red">*</b>)
             </label>
             <input type="text" class="form-control" name="lastName" [(ngModel)]="user.lastName" #lastName="ngModel" required>
             <div *ngIf="lastName.invalid && lastName.dirty" class="text-danger">
@@ -39,7 +39,7 @@
       
           <div class="form-group" [ngClass]="{'has-error': street.invalid && street.dirty}">
             <label for="street" class="control-label">
-              Street
+              Street (<b style="color: red">*</b>)
             </label>
             <input type="text" class="form-control" name="street" [(ngModel)]="user.street" #street="ngModel" required>
             <div *ngIf="street.invalid && street.dirty" class="text-danger">
@@ -49,7 +49,7 @@
       
           <div class="form-group" [ngClass]="{'has-error': city.invalid && city.dirty}">
             <label for="city" class="control-label">
-              Cityt
+              Cityt (<b style="color: red">*</b>)
             </label>
             <input type="text" class="form-control" name="city" [(ngModel)]="user.city" #city="ngModel" required>
             <div *ngIf="city.invalid && city.dirty" class="text-danger">
@@ -59,7 +59,7 @@
       
           <div class="form-group">
             <label for="gender" class="control-label">
-              Gender
+              Gender (<b style="color: red">*</b>)
             </label>
             <div class="form-group">
               <div class="radio">
@@ -77,23 +77,23 @@
       
           <div class="form-group" [ngClass]="{'has-error': email.invalid && email.dirty}">
             <label for="city" class="control-label">
-              Email
+              Email (<b style="color: red">*</b>)
             </label>
             <input type="text" class="form-control" name="email" [(ngModel)]="user.email" #email="ngModel" pattern="^[a-z0-9._-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
               title="Email is invalid" required>
             <div *ngIf="email.invalid && email.dirty" class="text-danger">
-              Email is required, Or Email invalid.
+              Email is required and valid..
             </div>
           </div>
       
           <div class="form-group" [ngClass]="{'has-error': pictureURL.invalid && pictureURL.dirty}">
             <label for="pictureURL" class="control-label">
-              Picture URL
+              Picture URL (<b style="color: red">*</b>)
             </label>
             <input type="text" class="form-control" name="pictureURL" [(ngModel)]="user.pictureURL" #pictureURL="ngModel" pattern="(?:([^:/?#]+):)?(?://([^/?#]*))?([^?#]*\.(?:jpg|gif|png))(?:\?([^#]*))?(?:#(.*))?"
               title="Picture URL invalid" required>
             <div *ngIf="pictureURL.invalid && pictureURL.dirty" class="text-danger">
-              PictureURL is required
+              Picture URL is required and valid.
             </div>
           </div>
           <button class="btn btn-success" type="submit" [disabled]="userForm.form.invalid">
